--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
 
 <!--add link to your bigcartel or whatever you use-->
-<a href="shopurl">https://scentcrafters.com/product/ignite/<button id="button" class="dropbtn" >shop </button></a>
+<a href=https://scentcrafters.com/product/ignite>Shop <button id="button" class="dropbtn" >shop </button></a>
 
 
 
