--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   <div id="welcome">
      <!-- Fill in text here -->  
   <h1> welcome to my site! </h1>
-  <p class="maintext"> here is information! blah blah blah blah blah blah blah blah blah blah blah blah.. </p>
+  <p class="maintext"> My name is Mousa, and this site is the main directory to my portfolio, contacts and personal blogspace. </p>
   
   </div>
 
@@ -74,9 +74,9 @@ width:100%; height:100%; object-fit: fill; ">  </a>
    <!-- Fill in text/media here -->  
    <h1> announcements </h1>
    
-   <p class="maintext"> blah blah blah blah blah blah blah blah blah blah blah blah blah.. you'll be able to find it <a href="https://en.wikipedia.org/wiki/Trilobite"> here..</a> </p>
+   <p class="maintext"> 3/4/2024 welcome to the grand opening of Mousa.world! 
    
- <img id="announcementgif" src="/images/cat-soup.gif">
+ <img id="announcementgif" src="/images/18_400.webp">
    
   </div>
   </div>
@@ -84,14 +84,14 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   
   <div id="recentwork">
   <div class="text-container">
-  <h1> recent Work </h1>
+  <h1> Recent Work </h1>
 
    <!-- Fill in media here --> 
 
    <div class="gallery">
-<a target="_blank" href="/images/image1.jpeg">
-    <img src="/images/image1.jpeg" alt="dog in me"> </a>
-    <div class="desc">Image Example</div>
+<a target="_blank" href="https://scentcrafters.com/product/ignite/">
+    <img src="/images/ignite-bottle.png" alt="Ignite"> </a>
+    <div class="desc">Ignite Cologne</div>
 </div>
 
 <div class="gallery">
