website update things

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website title</title>
-    <link rel="icon" href="tabicon.png">
+    <title>Mousa Media</title>
+    <link rel="icon" href="mousaworldlogo.png">
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
 
   </head>
@@ -52,7 +52,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
 
 
- <a href="About Me"> <button id="button" class="dropbtn" >webring </button></a>
+ <a href="webring"> <button id="button" class="dropbtn" >About Me </button></a>
 
 
  </div> 
@@ -137,7 +137,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
  
 
 </div>
-    <div class="footer"><p>footer</p></div>
+    <div class="footer"><p>Mousa Media 2024</p></div>
 </div>
     <script>
   /* When the user clicks on the button, 
@@ -210,7 +210,7 @@ window.addEventListener("click", function(event) {
   #content { 
   height: 120vh;
   position: relative;
-  background-image: url(bgrepeat.png);
+  background-image: url(mousa_world_bg.JPG);
   background-position: center;
   background-size: 100%;
   background-repeat: repeat;
@@ -255,7 +255,7 @@ window.addEventListener("click", function(event) {
   top: 28vh;
   left: 2vw;
   right: 80%;
-  background-color: #7fc7b8;
+  background-color: #db6211;
   border: 2px solid black;
 }
 
@@ -278,7 +278,7 @@ window.addEventListener("click", function(event) {
   top: 28vh;
   right: 2vw;
   background-color: black;
-  border: 2px solid #7fc7b8;
+  border: 2px solid #ff0000;
   color: white;
   justify-content: space-evenly;
 }
