icon(ic) update

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mousa Media</title>
-    <link rel="icon" href="mousaworldlogo.png">
+    <title>Mousa World</title>
+    <link rel="icon" href="mousaworldlogo.ico">
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
 
   </head>
