--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
 
 <!--add link to your bigcartel or whatever you use-->
-<a href=https://scentcrafters.com/product/ignite> <button id="button" class="dropbtn" >shop </button></a>
+<a href="https://scentcrafters.com/product/ignite" target="_blank"> <button id="button" class="dropbtn" >shop </button></a>
 
 
 
- <a href="webring"> <button id="button" class="dropbtn" >About Me </button></a>
+ <a href="webring"> <button id="button" class="dropbtn" >about me </button></a>
 
 
  </div> 
@@ -198,7 +198,7 @@ window.addEventListener("click", function(event) {
   left:0;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: rgb(7, 3, 68);
   color: black;
   text-align: center;
   height: 80px;
@@ -247,7 +247,7 @@ window.addEventListener("click", function(event) {
 /*  Change colors or add backgrounds for announcements section*/
   #announcements { 
   padding: 2%;
-  vertical-align: top;
+  vertical-align: bottom;
   border-radius: 25px;
   display: block;
   width: 33%;
