--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
  </div> 
 
- <marquee bgcolor="#e8e8e8" class="scrolla">message</marquee>
+ <marquee bgcolor="#425fe3" class="scrolla">THE WORLD IS YOURS</marquee>
 
      <div id="content">
       
@@ -95,15 +95,15 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 </div>
 
 <div class="gallery">
-<a target="_blank" href="/videos/Im Firing My Lazer.mp4">
-    <img src="/videos/videothumbnail.png" alt="Firin mah lazer"> </a>
-    <div class="desc">Video Example</div>
+<a target="_blank" href="/videos/Noz_site_example.mp4">
+    <img src="/videos/Noz_vid_thumbnail.jpg" alt="Noz Shopify walkthrough"> </a>
+    <div class="desc">Noz Shopify</div>
 </div>
 
 <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
+<a target="_blank" href="images/MarioKart.jpg">
+    <img src="images/MarioKart.jpg" alt="Mario Kart"> </a>
+    <div class="desc">I won Mario Kart DS</div>
 </div>
 
   
@@ -117,16 +117,16 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   <div id="importantstuff">
   <div class="text-container">
     <!-- Fill in text/media here -->  
-  <h1 style="color:black;"> important stuff</h1>
+  <h1 style="color:black;"> Current Media List</h1>
   
- <p class="maintext" style="color:black;"> hello! heres some relevant information or cool stuff about me. </p> 
+ <p class="maintext" style="color:black;"> hello! here is five pieces of art that currently inspire me. </p> 
   
  <ul>
-  <li>coffee</li>
-  <li>tea</li>
-  <li>milk</li>
-  <li>eggs</li>
-  <li>bread</li>
+  <li>The Vanishing Half</li>
+  <li>Dantes Inferno</li>
+  <li>One Piece</li>
+  <li>The Vince Staples Show</li>
+  <li>Tekken 8</li>
 </ul>
   
   </div>
@@ -166,7 +166,7 @@ window.addEventListener("click", function(event) {
   top:10%;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: "#425fe3";
   color: white;
   text-align: center;
   vertical-align:middle;
@@ -199,7 +199,7 @@ window.addEventListener("click", function(event) {
   right:0;
   width:100%;
   background-color: rgb(7, 3, 68);
-  color: black;
+  color: rgb(0, 0, 0);
   text-align: center;
   height: 80px;
 }
@@ -247,7 +247,7 @@ window.addEventListener("click", function(event) {
 /*  Change colors or add backgrounds for announcements section*/
   #announcements { 
   padding: 2%;
-  vertical-align: bottom;
+  vertical-align: top;
   border-radius: 25px;
   display: block;
   width: 33%;
@@ -255,7 +255,7 @@ window.addEventListener("click", function(event) {
   top: 28vh;
   left: 2vw;
   right: 80%;
-  background-color: #db6211;
+  background-color: #ff00006e;
   border: 2px solid black;
 }
 
@@ -278,7 +278,7 @@ window.addEventListener("click", function(event) {
   top: 28vh;
   right: 2vw;
   background-color: black;
-  border: 2px solid #ff0000;
+  border: 2px solid #ff000080;
   color: white;
   justify-content: space-evenly;
 }
@@ -301,7 +301,7 @@ window.addEventListener("click", function(event) {
 }
 
 div.gallery:hover {
-  border: 1px solid #777;
+  border: 1px solid #ffffff;
   box-shadow: 5px 8px; #FFF
 }
 
@@ -332,7 +332,7 @@ div.gallery:hover {
 #importantstuff { 
   padding:2%;  
   border-radius: 25px;
-  border: 2px solid #7fc7b8;
+  border: 2px solid #425fe3;
   position:absolute;  
   display:block;
   width:88vw;
@@ -378,7 +378,7 @@ ul {
 }
 
   .cursor {
-  cursor: url(customcursorfilename.png), auto;
+  cursor: url(http://www.rw-designer.com/cursor-set/yellow-3), auto;
   height: 350px;
   width: 25%;
   left: 200px;
@@ -533,7 +533,7 @@ ul {
   top: 15vh;
   left: 1vw;
   right: 80%;
-  background-color: #7fc7b8;
+  background-color: #020483;
   border: 2px solid black;
  }
 }
@@ -549,7 +549,7 @@ ul {
   top: 15vh;
   right: 1vw;
   background-color: black;
-  border: 2px solid #7fc7b8;
+  border: 2px solid #06003d;
   color: white;
  }      
 }      
