--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website title</title>
-    <link rel="icon" href="tabicon.png">
+    <title>Mousa World</title>
+    <link rel="icon" href="mousaworldlogo.ico">
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
 
   </head>
@@ -14,19 +14,18 @@
   <div id="content-wrap">
    <!--1400px x 200px banner-->
   <div id="banner">
-<a href="blog"> <img src='blogbanner.png' style="
+<a href="index"> <img src='banner1.png' style="
 width:100%; height:100%; object-fit: fill; ">  </a>
   </div>
    
 
-
-   <div class="navbar">
+    <div class="navbar">
 
 
 <a href="index"> <button id="button" class="dropbtn">home </button></a>
 
 
-
+ <!--Dropdown button. Duplicate what you see to add more!-->
 <div class="dropdown">
   <button id="drop" class="dropbtn">gallery </button>
   <div id="myDropdown" class="dropdown-content">
@@ -49,11 +48,11 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
 
 <!--add link to your bigcartel or whatever you use-->
-<a href="shopurl"> <button id="button" class="dropbtn" >shop </button></a>
+<a href="https://scentcrafters.com/product/ignite" target="_blank"> <button id="button" class="dropbtn" >shop </button></a>
 
 
 
- <a href="webring"> <button id="button" class="dropbtn" >webring </button></a>
+ <a href="webring"> <button id="button" class="dropbtn" >about me </button></a>
 
 
  </div> 
@@ -152,14 +151,15 @@ width:100%; height:100%; object-fit: fill; ">  </a>
      
     <div class="text-container1">
      <!--Blog date-->  
-    <h1>BLOG #1 6/9/2040</h1>
+    <h1>BLOG #1 11/18/2022</h1>
     <!--Blog title-->
-    <h2>My First Blog</h2>
+    <h2>I Love One Piece</h2>
   
     <!--Insert the thumbnail text here!-->
    <p class="blog">
-        I love blogging blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah... </p> 
-        
+    Well hello again, it's me, Mousa. Now as some of you may or may not know I have been on a short little hiatus from the internet (well social media). During my break, I have decided to catch up on many things. I have decided to read more (currently taking book recommendations), self-care through exercise and therapy as well as eating better, and lastly I have been watching a lot of anime. Mostly Naruto, Mob Psycho, and now possibly one of my new favorite anime One Piece. through a mixture of reading the manga and watching the episodes at night, I have been able to get to the middle of the Arabasta arc (episode 117 in the anime). Without a doubt, I have never felt so touched before emotionally when watching tv. Oda is able to craft a world that is so inviting and truly encourages me to push harder and be better. When I see Luffy proclaim his dreams of being the pirate king I find myself gaining confidence in my own dreams.
+
+      <img src="https://staticg.sportskeeda.com/editor/2022/11/a402f-16694231050443-1920.jpg"   
      <center> <input onclick="change1()" value="Show More" ID="button1" type="submit" class="collapse1" style="cursor: url(custompointer.png), auto; position:relative; top:50%; margin: 0 auto; display:inline-block; width:30vw;height:30px;color:white; background-color:black;"/>
    
   
