--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="content-wrap">
    <!--1400px x 200px banner-->
   <div id="banner">
-<a href="index"> <img src='banner1.png' style="
+<a href="index"> <img src='mousabanner1.png' style="
 width:100%; height:100%; object-fit: fill; ">  </a>
   </div>
    
