--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ ul {
   #content { 
   height: 86vh;
   position: relative;
-  background-image: url(bgrepeat.png);
+  background-image: url(mousa_world_bg.JPG);
   background-position: center;
   background-size: 100%;
   background-repeat: repeat;
@@ -528,14 +528,13 @@ ul {
   vertical-align: top;
   border-radius: 25px;
   display: block;
-  width: 31%;
+  width: 33%;
   position: absolute;
-  top: 15vh;
-  left: 1vw;
+  top: 28vh;
+  left: 2vw;
   right: 80%;
-  background-color: #020483;
+  background-color: #ff00006e;
   border: 2px solid black;
- }
 }
 
 @media screen and (max-width: 700px) { /* Specific to this particular element on phones*/
