--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@ ul {
   right: 80%;
   background-color: #ff00006e;
   border: 2px solid black;
+ }
 }
 
 @media screen and (max-width: 700px) { /* Specific to this particular element on phones*/
@@ -590,13 +591,13 @@ ul {
       
   @media screen and (max-width: 700px) { /* Specific to this particular element on phones*/     
   #importantstuff { 
-  padding:2%;  
+    padding:2%;  
   border-radius: 25px;
-  border: 2px solid #7fc7b8;
+  border: 2px solid #425fe3;
   position:absolute;  
   display:block;
   width:88vw;
-  top: 6vh;
+  top: 10vh;
   left: 0;
   right: 0;
   margin:0 auto;
