--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
    
    <p class="maintext"> 3/4/2024 welcome to the grand opening of Mousa.world! 
    
- <img id="announcementgif" src="/images/18_400.webp" height="500">
+ <img id="announcementgif" src="/images/18_400.jpg" height="500">
    
   </div>
   </div>
