--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ ul {
 @media screen and (max-width: 700px) { /* Specific to this particular element on phones*/      
 #announcements { 
   padding: 2%;
-  vertical-align: top;
+  vertical-align: bottom;
   border-radius: 25px;
   display: block;
   width: 33%;
