--- a/blog.html
+++ b/blog.html
@@ -214,8 +214,7 @@ function change3() {
       margin: 0 auto;">
       <img src="https://lh3.googleusercontent.com/proxy/kcCiAUCDr18SPyIZeQU1zDaRMPIhv8GSGcCiQu2mPPFEzE7TOFcANiDNeUFyFsFQvzux1Wr79KuJuV9TdO3sOD-4SqxyUIrVnyGud-rGecCDeeqntwDeQR3fRaQJDnxlIEBQkH9ArA" style="width: 90%;
       display: block;
-      margin: 0 auto;">
-      <img src=""  
+      margin: 0 auto;">  
   
   
   
@@ -386,7 +385,7 @@ window.addEventListener("click", function(event) {
   top:10%;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: #0F1F38;
   color: white;
   text-align: center;
   vertical-align:middle;
