--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
  </div> 
 
- <marquee bgcolor="#425fe3" class="scrolla">THE WORLD IS YOURS</marquee>
+ <marquee bgcolor="#FF1F00" class="scrolla">THE WORLD IS YOURS</marquee>
 
      <div id="content">
       
@@ -239,7 +239,7 @@ window.addEventListener("click", function(event) {
   left: 0;
   right: 0;
   color: white;
-  background-color: black;
+  background-color: #0F1F38;
   border: 2px solid #e1e8e2;
   text-align:center;
 }
@@ -277,9 +277,9 @@ window.addEventListener("click", function(event) {
   position: absolute;
   top: 28vh;
   right: 2vw;
-  background-color: black;
-  border: 2px solid #ff000080;
-  color: white;
+  background-color: rgba(0, 0, 0, 0.671);
+  border: 2px solid #ff84009f;
+  color: rgba(255, 255, 255, 0.685);
   justify-content: space-evenly;
 }
 
@@ -479,7 +479,7 @@ ul {
 
 @media screen and (max-width: 700px) { /* Specific to this particular element on phones*/
  .dropdown-content a {
-  color: black;
+  color: #0F1F38;
   padding: 5px 5px;
   text-decoration: none;
   display: block;
@@ -545,13 +545,13 @@ ul {
   padding: 2%;
   vertical-align: top;
   border-radius: 25px;
-  width: 55%;
+  width: 53%;
   position: absolute;
-  top: 15vh;
-  right: 1vw;
-  background-color: black;
-  border: 2px solid #06003d;
-  color: white;
+  top: 28vh;
+  right: 2vw;
+  background-color: rgba(0, 0, 0, 0.671);
+  border: 2px solid #ff84009f;
+  color: rgba(255, 255, 255, 0.685);
  }      
 }      
    
@@ -594,7 +594,7 @@ ul {
   #importantstuff { 
     padding:2%;  
   border-radius: 25px;
-  border: 2px solid #425fe3;
+  border: 2px solid #0F1F38;
   position:absolute;  
   display:block;
   width:88vw;
