contact and about me created!

--- a/blog.html
+++ b/blog.html
@@ -413,7 +413,7 @@ window.addEventListener("click", function(event) {
   left:0;
   right:0;
   width:100%;
-  background-color: rgb(7, 3, 68);
+  background-color: #FF8100;
   color: black;
   text-align: center;
   height: 80px;
@@ -565,7 +565,7 @@ cursor: url(custompointer.png), auto;
   body {
   background:black;
   background-size:100%;
-  background-image: url('backgroundimagefilename.png');
+  background-image: url(mousa_world_bg.JPG);
   background-repeat: repeat;
   font-family: "Menlo";
   color:black;
