--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website title</title>
-    <link rel="icon" href="tabicon.png">
+    <title>Mousa World</title>
+    <link rel="icon" href="mousaworldlogo.ico">
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
 
   </head>
@@ -14,7 +14,7 @@
   <div id="content-wrap">
     <!--1400px x 200px banner -->
   <div id="banner">
- <a href="contact"> <img src='contactbanner.png' style="
+ <a href="contact"> <img src='mousacontactbanner.png' style="
 width:100%; height:100%; object-fit: fill; "> </a>
   </div>
  
@@ -49,11 +49,11 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
 
 <!--add link to your bigcartel or whatever you use-->
-<a href="shopurl"> <button id="button" class="dropbtn" >shop </button></a>
+<a href="https://scentcrafters.com/product/ignite" target="_blank"> <button id="button" class="dropbtn" >shop </button></a>
 
 
 
- <a href="webring"> <button id="button" class="dropbtn" >webring </button></a>
+ <a href="webring"> <button id="button" class="dropbtn" >about me </button></a>
 
 
  </div> 
@@ -67,30 +67,34 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
 <div id="profile">
 <!--Plug in your avatar image here!--> 
-<img class="bg" src="/images/avatar.png">
+<img class="bg" src="/images/MousaContactPhoto.jpg">
 </div>
+
 
 <div class="row">
         <div class="column1" style="background-color:#898f8a;">
           <!--Plug in your name here!-->
-            <h2 style="text-align:center;">Name</h2>
+            <h2 style="text-align:center;">Mousa Mansour</h2>
             <!--Plug in your bio here!-->
-            <p class="IDtext">this is a really long winded explanation of what i do or why you're here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah!</p>
+            <p class="IDtext"><i>"The unexamined life is a life not worth living" - Socrates</i></p>
+            <p class="IDtext">I am always hungry to learn and grow my skills, I have a passion for marketing due to it being the psychology of a business.
+
+              When I'm not learning you can find me creating or writing. I have a huge passion for writing and art and use it as a chance to grow and challenge my mind.</p>
         </div>
 
 
 <div class="column2" style="background-color:#898f8a;">
           <!--Plug in your social media accounts here!-->
             <h2>Where You Can Find Me</h2>
-          <a href="twitter.com/username"> <p class="IDtext">My Twitter</p></a>
-          <a href="instagram.com/username"> <p class="IDtext">My Instagram</p></a>
+          <a href="https://www.linkedin.com/in/mousamansour/" target="_blank"> <p class="IDtext">Linkedin</p></a>
+          <a href="https://www.instagram.com/_____mousa_____?igsh=MWRlNHJ1a3NoeDJnOQ%3D%3D&utm_source=qr" target="_blank"> <p class="IDtext">Instagram</p></a>
         </div>
 
 <div class="column3" style="background-color:#898f8a;">
    <!--Plug in your business email information here!-->
-            <h2>Contact Info</h2>
+            <h2>Email me</h2>
             <br>
-            <p class="IDtext">deeznuts@gmail.com</p>
+            <p class="IDtext">mousamansour2@gmail.com</p>
         </div>
 </div>
 
@@ -101,7 +105,7 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
 </div>
 
-    <div class="footer"><p>footer</p> </div>
+    <div class="footer"><p>Mousa Media 2024</p> </div>
 </div>
     <script>
   /* When the user clicks on the button, 
@@ -126,7 +130,7 @@ window.addEventListener("click", function(event) {
   top:10%;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: #0F1F38;
   color: white;
   text-align: center;
   vertical-align:middle;
@@ -154,7 +158,7 @@ window.addEventListener("click", function(event) {
   left:0;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: #0F1F38;
   color: black;
   text-align: center;
   height: 80px;
