--- a/webring.html
+++ b/webring.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website title</title>
-    <link rel="icon" href="tabicon.png">
+    <title>Mousa World</title>
+    <link rel="icon" href="mousaworldlogo.ico">
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
 
   </head>
@@ -14,7 +14,7 @@
    <div id="content-wrap">
  <!--1400px x 200px banner-->
   <div id="banner">
-<a href="webring"> <img src='webringbanner.png' style="
+<a href="webring"> <img src='mousaaboutmebanner.png' style="
 width:100%; height:100%; object-fit: fill; "> </a>
   </div>
  
@@ -49,11 +49,11 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
 
 <!--add link to your bigcartel or whatever you use-->
-<a href="shopurl"> <button id="button" class="dropbtn" >shop </button></a>
+<a href="https://scentcrafters.com/product/ignite" target="_blank"> <button id="button" class="dropbtn" >shop </button></a>
 
 
 
- <a href="webring"> <button id="button" class="dropbtn" >webring </button></a>
+ <a href="webring"> <button id="button" class="dropbtn" >about me </button></a>
 
 
  </div> 
@@ -64,32 +64,22 @@ width:100%; height:100%; object-fit: fill; "> </a>
   
   <div id="namecontainer">
   
-  <h2> optional text about the power of friendship </h2>
+  <h2> Hello my name is Mousa, Let's work together </h2>
   
   <!--add your friend's banners or website links-->
-  
+
+  <p class="webring">I am currently attending VCU for a bachelor's degree in marketing and a minor in sales. Outside of school, I have an intense passion for the arts and always want to grow and learn in any way I can. This website is me, or at least an extension of me, as the website grows and improves it will represent my own personal growth and improvement.</p>
+  <p class="webring"><b>Why you should consider working with me</b></p>
+  <p class="webring">I am ambitious and I am always looking for ways to get the most out of life. I am also a team player who strives to make sure everyone in my circle eats. Lastly, I am also a creative thinker who finds new ways to send messages out. I am interested in working on any project you may view as a fit for me and I will answer you if you reach out to me via the “contact” button at the top of this website.</p>
+  <p class="webring"><b>Acknowledgments</b></p>
+  <p class="webring">Avery for giving me resources for website creation</p>
+  <p class="webring">Naku for inspiration and additional customization resources</p>
+  <p class="webring">Jay for creating an amazing guide and template on hosting a site</p>
+
     <div class="webringbanner">
- <a href="/images/www.friend.com"> <img src='/images/friendwebringbanner.png' style="
-width:100%; height:100%; object-fit: fill; "> </a>
-  </div>
-   <div class="webringbanner">
- <a href="/images/www.friend.com"> <img src='/images/friendwebringbanner.png' style="
-width:100%; height:100%; object-fit: fill; "> </a>
-  </div>
-   <div class="webringbanner">
- <a href="/images/www.friend.com"> <img src='/images/friendwebringbanner.png' style="
-width:100%; height:100%; object-fit: fill; "> </a>
   </div>
  <br> 
- <a href="www.friend.com"> www.friend.com </a>
- <br>
- <br>
- <br>
- <a href="www.friend.com"> www.friend.com </a>
- <br>
- <br>
- <br>
- <a href="www.friend.com"> www.friend.com </a>
+ <a href="https://docs.google.com/document/d/1xYi03C_7OFFxFHU9Z06xEA-VCWZMWTZRWc0X6gFkZL4/edit" target="_blank"> Jay's hosting guide </a>
 
   
   
