fixed announcements, added confidence blog, image adjustments

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,9 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
 <div id="profile">
 <!--Plug in your avatar image here!--> 
-<img class="bg" src="/images/MousaContactPhoto.jpg">
+<img class="bg" src="/images/MousaContactPhoto.jpg"
+display: block;
+margin: 0 auto;>
 </div>
 
 
@@ -87,14 +89,14 @@ width:100%; height:100%; object-fit: fill; "> </a>
           <!--Plug in your social media accounts here!-->
             <h2>Where You Can Find Me</h2>
           <a href="https://www.linkedin.com/in/mousamansour/" target="_blank"> <p class="IDtext">Linkedin</p></a>
-          <a href="https://www.instagram.com/_____mousa_____?igsh=MWRlNHJ1a3NoeDJnOQ%3D%3D&utm_source=qr" target="_blank"> <p class="IDtext">Instagram</p></a>
+          <a href="https://www.instagram.com/mousa.world_/" target="_blank"> <p class="IDtext">Instagram</p></a>
         </div>
 
 <div class="column3" style="background-color:#898f8a;">
    <!--Plug in your business email information here!-->
             <h2>Email me</h2>
             <br>
-            <p class="IDtext">mousamansour2@gmail.com</p>
+            <a href="mailto:mousamansour2@gmail.com" target="_blank" title="email me">mousamansour2@gmail.com</a>
         </div>
 </div>
 
