tekken 8 link better

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
    <h1> announcements </h1>
    
    <p class="maintext">3 4 24 welcome to Mousa World! please enjoy your visit :) New blog as well today!</p>
-   <a href="https://www.youtube.com/watch?v=MvKaqdZaHmY&list=PLz7PbgPufE2SlUHCutRYkAOCLvHkCtVbD&index=2&ab_channel=MousaMovies" target="_blank" title="I Suck at tekken 8">New youtube video 3/4/24 Tekken 8 CWCW</a>   
+   <a href="https://www.youtube.com/watch?v=MvKaqdZaHmY&list=PLz7PbgPufE2SlUHCutRYkAOCLvHkCtVbD&index=2&ab_channel=MousaMovies" target="_blank" title="I Suck at tekken 8">New Vid "Tekken 8 CWCW"</a>   
  <img id="announcementgif" src="/images/18_400.jpg" style="width: 50%;
  display: block;
  margin: 0 auto;"> 
