fixed image on blog 1

--- a/blog.html
+++ b/blog.html
@@ -228,7 +228,7 @@ function change3() {
       <img src="https://colorscultureconnect.com/cdn/shop/articles/Screen_Shot_2023-08-27_at_7.55.21_PM.png?v=1693158983" style="width: 90%;
       display: block;
       margin: 0 auto;">
-      <img src="https://lh3.googleusercontent.com/proxy/kcCiAUCDr18SPyIZeQU1zDaRMPIhv8GSGcCiQu2mPPFEzE7TOFcANiDNeUFyFsFQvzux1Wr79KuJuV9TdO3sOD-4SqxyUIrVnyGud-rGecCDeeqntwDeQR3fRaQJDnxlIEBQkH9ArA" style="width: 90%;
+      <img src="https://imperialtalker.files.wordpress.com/2019/08/luke-sunset.jpg?w=1200" style="width: 90%;
       display: block;
       margin: 0 auto;">  
   
