changed 2 gallery to portfolio

--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,12 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
 
 <div class="dropdown">
-  <button id="drop" class="dropbtn">gallery </button>
+  <button id="drop" class="dropbtn">portfolio</button>
   <div id="myDropdown" class="dropdown-content">
     <hr class="solid">
-    <a href="/gallery">Section 1</a>
+    <a href="/gallery">Professional</a>
     <hr class="solid">
-    <a href="/gallery2">Section 2</a>
+    <a href="/gallery2">Creative</a>
     <hr class="solid">
   </div>
 </div>
