--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
 
  <!--Dropdown button. Duplicate what you see to add more!-->
-<div class="dropdown">
-  <button id="drop" class="dropbtn">gallery </button>
+ <div class="dropdown">
+  <button id="drop" class="dropbtn">portfolio</button>
   <div id="myDropdown" class="dropdown-content">
     <hr class="solid">
-    <a href="/gallery">Section 1</a>
+    <a href="/gallery">Professional</a>
     <hr class="solid">
-    <a href="/gallery2">Section 2</a>
+    <a href="/gallery2">Creative</a>
     <hr class="solid">
   </div>
 </div>
