--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>website title</title>
-    <link rel="icon" href="tabicon.png"> <!-- insert tab icon -->
+    <link rel="icon" href="mousaworldlogo.ico"> <!-- insert tab icon -->
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head> 
   <body>
@@ -12,7 +12,7 @@
   <div id="content-wrap">
      <!--1400px x 200px -->
   <div id="banner">
- <a href="gallery"> <img src='gallerybanner.png' style="
+ <a href="gallery"> <img src='mousagallerybanner.png' style="
 width:100%; height:100%; object-fit: fill; "> </a>
   </div>
 
