--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@ window.addEventListener("click", function(event) {
   left:0;
   right:0;
   width:100%;
-  background-color: #0F1F38;
+  background-color: #FF8100;
   color: black;
   text-align: center;
   height: 80px;
@@ -257,7 +257,7 @@ window.addEventListener("click", function(event) {
   body {
   background:white;
   background-size:100%;
-  background-image: url('backgroundimagefilename.png');
+  background-image: url(mousa_world_bg.JPG);
   background-repeat: repeat;
   font-family: "Menlo";
   color:black;
