--- a/gallery.html
+++ b/gallery.html
@@ -166,7 +166,7 @@ width:100%; height:100%; object-fit: fill; "> </a>
  
 
 </div>
-<div class="footer"><p>footer</p></div>
+<div class="footer"><p>Mousa Media 2024</p></div>
 </div>
     <script>
   /* When the user clicks on the button, 
@@ -193,7 +193,7 @@ window.addEventListener("click", function(event) {
   top:10%;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: #0F1F38;
   color: white;
   text-align: center;
   vertical-align:middle;
@@ -220,7 +220,7 @@ window.addEventListener("click", function(event) {
   left:0;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: #FF8100;
   color: black;
   text-align: center;
   height: 80px;
