--- a/gallery2.html
+++ b/gallery2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>website title</title>
-    <link rel="icon" href="tabicon.png">
+    <link rel="icon" href=mousaworldlogo.ico>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head> 
   <body>
@@ -12,7 +12,7 @@
   <div id="content-wrap">
      <!--1400px x 200px banner-->
   <div id="banner">
- <a href="gallery"> <img src='gallerybanner.png' style="
+ <a href="gallery"> <img src=mousagallerybanner.png style="
 width:100%; height:100%; object-fit: fill; "> </a>
   </div>
 
@@ -165,7 +165,7 @@ width:100%; height:100%; object-fit: fill; "> </a>
  
 
 </div>
-<div class="footer"><p>footer</p></div>
+<div class="footer"><p>Mousa Media 2024</p></div>
 </div>
     <script>
   /* When the user clicks on the button, 
@@ -192,7 +192,7 @@ window.addEventListener("click", function(event) {
   top:10%;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: #0F1F38;
   color: white;
   text-align: center;
   vertical-align:middle;
@@ -219,7 +219,7 @@ window.addEventListener("click", function(event) {
   left:0;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: #FF8100;
   color: black;
   text-align: center;
   height: 80px;
