--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   <div class="text-container">
    <!-- Fill in text/media here -->  
    <h1> announcements </h1>
-   
+   <p class="maintext">3 13 24 GO STREAM OSWEGATCHIE :D</p>
    <p class="maintext">3 4 24 welcome to Mousa World! please enjoy your visit :) New blog as well today!</p>
    <a href="https://www.youtube.com/watch?v=MvKaqdZaHmY&list=PLz7PbgPufE2SlUHCutRYkAOCLvHkCtVbD&index=2&ab_channel=MousaMovies" target="_blank" title="I Suck at tekken 8">New Vid "Tekken 8 CWCW"</a>   
  <img id="announcementgif" src="/images/18_400.jpg" style="width: 50%;
@@ -168,7 +168,7 @@ window.addEventListener("click", function(event) {
   top:10%;
   right:0;
   width:100%;
-  background-color: "#425fe3";
+  background-color: "#0F1F38";
   color: white;
   text-align: center;
   vertical-align:middle;
@@ -200,7 +200,7 @@ window.addEventListener("click", function(event) {
   left:0;
   right:0;
   width:100%;
-  background-color: rgb(7, 3, 68);
+  background-color: #FF8100;
   color: rgb(0, 0, 0);
   text-align: center;
   height: 80px;
