--- a/webring.html
+++ b/webring.html
@@ -96,7 +96,7 @@ width:100%; height:100%; object-fit: fill; "> </a>
  
 </div>
 
-    <div class="footer"><p>footer</p></div>
+    <div class="footer"><p>Mousa Media 2024</p></div>
 </div>
     
     <script>
@@ -123,7 +123,7 @@ window.addEventListener("click", function(event) {
   top:10%;
   right:0;
   width:100%;
-  background-color: grey;
+  background-color: #0F1F38;
   color: white;
   text-align: center;
   vertical-align:middle;
@@ -153,8 +153,8 @@ window.addEventListener("click", function(event) {
   left:0;
   right:0;
   width:100%;
-  background-color: grey;
-  color: black;
+  background-color: #FF8100;
+  color: rgb(0, 0, 0);
   text-align: center;
   height: 80px;
 }
@@ -181,7 +181,7 @@ window.addEventListener("click", function(event) {
   top: 15vh;
   left: 0;
   right: 0;
-  background-color: #98a39a;
+  background-color: #0F1F38;
   border: 2px solid #e1e8e2;
   text-align:center;
   border-radius:25px;    
@@ -272,7 +272,7 @@ window.addEventListener("click", function(event) {
   body {
   background:black;
   background-size:100%;
-  background-image: url('backgroundimagefilename.png');
+  background-image: url(mousa_world_bg.JPG);
   background-repeat: repeat;
   font-family: "Menlo";
 }
