--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@ width:100%; height:100%; object-fit: fill; ">  </a>
  <p class="maintext" style="color:black;"> hello! here is five pieces of art that currently inspire me. </p> 
   
  <ul>
-  <li>The Vanishing Half</li>
-  <li>Dantes Inferno</li>
-  <li>One Piece</li>
-  <li>The Vince Staples Show</li>
-  <li>Tekken 8</li>
+  <p class="maintext">The Vanishing Half</p>
+  <p class="maintext">Dante's Inferno</p>
+  <p class="maintext">One Piece</p>
+  <p class="maintext">The Vince Staples Show</p>
+  <p class="maintext">Tekken 8</p>
 </ul>
   
   </div>
