--- a/gallery2.html
+++ b/gallery2.html
@@ -46,11 +46,11 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
 
 <!--add link to your bigcartel or whatever you use-->
-<a href="shopurl"> <button id="button" class="dropbtn" >shop </button></a>
+<a href="https://scentcrafters.com/product/ignite" target="_blank"> <button id="button" class="dropbtn" >shop </button></a>
 
 
 
- <a href="webring"> <button id="button" class="dropbtn" >webring </button></a>
+ <a href="webring"> <button id="button" class="dropbtn" >about me</button></a>
 
 
  </div> 
