--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ window.addEventListener("click", function(event) {
   top:10%;
   right:0;
   width:100%;
-  background-color: "#0F1F38";
+  background-color: #0F1F38;
   color: white;
   text-align: center;
   vertical-align:middle;
