--- a/blog.html
+++ b/blog.html
@@ -583,7 +583,8 @@ cursor: url(custompointer.png), auto;
   background-size:100%;
   background-image: url(mousa_world_bg.JPG);
   background-repeat: repeat;
-  font-family: "Menlo";
+  font-family: "Futura";
+  src: url(Fonts/FuturaLightOblique.ttf);
   color:black;
 }
 
