fontsss again lul

--- a/blog.html
+++ b/blog.html
@@ -516,7 +516,8 @@ cursor: url(custompointer.png), auto;
   cursor: url(custompointerfilename.png), auto;
   transition-duration: 0.0s;
   /*must change manually to match css stylesheet body font*/
-  font-family: "Menlo";
+  font-family: "futura";
+  src: url(Fonts/Futura\ Light\ Oblique.otf)
 }
 
   .dropbtn:hover {
@@ -584,7 +585,7 @@ cursor: url(custompointer.png), auto;
   background-image: url(mousa_world_bg.JPG);
   background-repeat: repeat;
   font-family: "Futura";
-  src: url(Fonts/FuturaLightOblique.ttf);
+  src: url(Fonts/Futura\ Light\ Oblique.otf);
   color:black;
 }
 
