--- a/gallery2.html
+++ b/gallery2.html
@@ -254,7 +254,8 @@ window.addEventListener("click", function(event) {
   border-radius: 2px;
   cursor: url(custompointerfilename.png), auto;
   transition-duration: 0.0s;
-  font-family: "Menlo";
+  font-family: "futura";
+  src: url(Fonts/Futura\ Light\ Oblique.otf)
   /*must change manually to match css stylesheet body font*/
 }
 
