--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
       
   <div id="welcome">
      <!-- Fill in text here -->  
-  <h1> welcome to my site! </h1>
+  <h1> welcome to my site!</h1>
   <p class="maintext"> My name is Mousa, and this site is the main directory to my portfolio, contacts and personal blogspace. </p>
   
   </div>
@@ -371,7 +371,8 @@ ul {
   cursor: url(custompointerfilename.png), auto;
   transition-duration: 0.0;
   /*must change manually to match css stylesheet body font*/
-  font-family: "Menlo";
+  font-family: "futura";
+  src: url(Fonts/Futura\ Light\ Oblique.otf)
 }
 
   .dropbtn:hover {
