--- a/webring.html
+++ b/webring.html
@@ -206,7 +206,8 @@ window.addEventListener("click", function(event) {
   cursor: url(custompointerfilename.png), auto;
   transition-duration: 0.0s;
   /*must change manually to match css stylesheet body font*/
-  font-family: "Menlo";
+  font-family: "futura";
+  src: url(Fonts/Futura\ Light\ Oblique.otf)
 }
 
   .dropbtn:hover {
