--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ ul {
   #importantstuff { 
     padding:2%;  
   border-radius: 25px;
-  border: 2px solid #0F1F38;
+  border: 2px solid #425fe3;
   position:absolute;  
   display:block;
   width:88vw;
@@ -605,7 +605,7 @@ ul {
   left: 0;
   right: 0;
   margin:0 auto;
-  background-color: #fff;
+  background-color: #ff00006e;
   text-align:center;
  }    
 }     
