--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ ul {
   #importantstuff { 
     padding:2%;  
   border-radius: 25px;
-  border: 2px solid #425fe3;
+  border: 2px solid #000000;
   position:absolute;  
   display:block;
   width:88vw;
