--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
       
   <div id="welcome">
      <!-- Fill in text here -->  
-  <h1> welcome to my site!</h1>
+  <h1> Welcome to my site!</h1>
   <p class="maintext"> My name is Mousa, and this site is the main directory to my portfolio, contacts and personal blogspace. </p>
   
   </div>
@@ -72,7 +72,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   <div id="announcements">
   <div class="text-container">
    <!-- Fill in text/media here -->  
-   <h1> announcements </h1>
+   <h1> Announcements </h1>
    <p class="maintext">3 13 24 GO STREAM OSWEGATCHIE :D</p>
    <p class="maintext">3 4 24 welcome to Mousa World! please enjoy your visit :) New blog as well today!</p>
    <a href="https://www.youtube.com/watch?v=MvKaqdZaHmY&list=PLz7PbgPufE2SlUHCutRYkAOCLvHkCtVbD&index=2&ab_channel=MousaMovies" target="_blank" title="I Suck at tekken 8">New Vid "Tekken 8 CWCW"</a>   
@@ -119,9 +119,9 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   <div id="importantstuff">
   <div class="text-container">
     <!-- Fill in text/media here -->  
-  <h1 style="color:black;"> Current Media List</h1>
+  <h1 style="color:white;"> Current Media List</h1>
   
- <p class="maintext" style="color:black;"> hello! here is five pieces of art that currently inspire me. </p> 
+ <p class="maintext" style="color:white;"> hello! here is five pieces of art that currently inspire me. </p> 
   
  
   <p class="maintext">The Vanishing Half</p>
@@ -280,7 +280,7 @@ window.addEventListener("click", function(event) {
   top: 28vh;
   right: 2vw;
   background-color: rgba(0, 0, 0, 0.671);
-  border: 2px solid #ff84009f;
+  border: 2px solid #FF8100;
   color: rgba(255, 255, 255, 0.685);
   justify-content: space-evenly;
 }
@@ -342,7 +342,7 @@ div.gallery:hover {
   left: 0;
   right: 0;
   margin:0 auto;
-  background-color: #fff;
+  background-color: #ff00006e;
   text-align:center;
 }
 
