--- a/blog.html
+++ b/blog.html
@@ -100,7 +100,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
     <br>
     <p class="blog"><i>PS I included my “raw notes” at the end of this page just click the download link and you will get a zip file containing 4 note pages and 1 book chapter that I referenced.</i></p>
     <br>
-    <a href="files/Mousa Market Research Notes.zip" download="Mousa Notes"
+    <a href="files/Mousa Market Research Notes.zip"
     class="download-btn">download</a>
 
 
