google drive no download

--- a/blog.html
+++ b/blog.html
@@ -98,10 +98,9 @@ width:100%; height:100%; object-fit: fill; ">  </a>
     <p class="blog">Overall I had a great time and learned a lot, I would like to thank VCU again for this amazing opportunity. If you would like to connect with me then please feel free to connect with me on LinkedIn or send me an email. I am excited to continue my journey and I hope that what I learned today is not only helpful to me but helpful to you as well.</p>
     <br>
     <br>
-    <p class="blog"><i>PS I included my “raw notes” at the end of this page just click the download link and you will get a zip file containing 4 note pages and 1 book chapter that I referenced.</i></p>
+    <p class="blog"><i>PS I included my “raw notes” at the end of this page just click the button and you will find a drive folder containing 4 note pages and 1 book chapter that I referenced.</i></p>
     <br>
-    <a href="files/Mousa Market Research Notes.zip"
-    class="download-btn">download</a>
+    <a href="https://drive.google.com/drive/folders/1E1GvhHgjvHa5gi1BqjhTXlDBCyyErsx-?usp=sharing" target="_blank"> <button id="button" class="dropbtn" >notes</button></a>
 
 
 
