comics update lol

--- a/comics.html
+++ b/comics.html
@@ -14,7 +14,7 @@
    <div id="content-wrap">
  <!--1400px x 200px banner-->
   <div id="banner">
-<a href="webring"> <img src='mousaaboutmebanner.png' style="
+<a href="comics"> <img src='mousacomicbanner.png' style="
 width:100%; height:100%; object-fit: fill; "> </a>
   </div>
  
@@ -57,45 +57,17 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
  <a href="comics"> <button id="button" class="dropbtn" >comics </button></a>
 
-
  </div> 
 
 
-     <div id="content">
- 
-  
-  <div id="namecontainer">
-  
-  <h2> Hello my name is Mousa, Let's work together </h2>
-  
-  <!--add your friend's banners or website links-->
 
-  <p class="webring">I am currently attending VCU for a bachelor's degree in marketing and a minor in sales. Outside of school, I have an intense passion for the arts and always want to grow and learn in any way I can. This website is me, or at least an extension of me, as the website grows and improves it will represent my own personal growth and improvement.</p>
-  <p class="webring"><b>Why you should consider working with me</b></p>
-  <p class="webring">I am ambitious and I am always looking for ways to get the most out of life. I am also a team player who strives to make sure everyone in my circle eats. Lastly, I am also a creative thinker who finds new ways to send messages out. I am interested in working on any project you may view as a fit for me and I will answer you if you reach out to me via the “contact” button at the top of this website.</p>
-  <p class="webring"><b>Acknowledgments</b></p>
-  <p class="webring">Avery for giving me resources for website creation</p>
-  <p class="webring">Naku for inspiration and additional customization resources</p>
-  <p class="webring">Jay for creating an amazing guide and template on hosting a site</p>
-
-    <div class="webringbanner">
-  </div>
- <br> 
- <a href="https://docs.google.com/document/d/1xYi03C_7OFFxFHU9Z06xEA-VCWZMWTZRWc0X6gFkZL4/edit" target="_blank"> Jay's hosting guide </a>
-
-  
-  
-  
- 
- 
- </div>
- 
- 
- 
- 
- 
 </div>
- 
+ <h1>COMING SOON... ONE DAY</h1>
+
+ <img src="images/hangintherecat.jpg" style="width: 100%;
+ display: block;
+ margin: 0 auto;">
+
 </div>
 
     <div class="footer"><p>Mousa Media 2024</p></div>
