--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,8 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
  <a href="webring"> <button id="button" class="dropbtn" >about me </button></a>
 
+ <a href="comics"> <button id="button" class="dropbtn" >comics </button></a>
+
 
  </div> 
 
