--- a/comics.html
+++ b/comics.html
@@ -57,6 +57,8 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
  <a href="comics"> <button id="button" class="dropbtn" >comics </button></a>
 
+ <a href="music"> <button id="button" class="dropbtn" >music </button></a>
+
  </div> 
 
 
