--- a/music.html
+++ b/music.html
@@ -61,7 +61,7 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
  </div> 
 
- <h1>Reproting live* from a frequency yet to be discovered</h1>
+ <h1>Reporting live* from a frequency yet to be discovered</h1>
  <p style="text-align: center; color:#e1e8e2">on the air with 76.13 MWFM where we only play whatever I want</p>
 
  
