--- a/blog.html
+++ b/blog.html
@@ -97,7 +97,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
     <br>
     <p class="blog">The music page is far more interesting to me, I will create a curated page soley for my personal mixes, and other misc projects that I would have never put onto streaming. I want to experiment with sound more and having a platform like my website is truly helpful for my confidence, I love this site because there is not numbers, or corporate UI. Everything here is according to my own vision, so I would like my personal art to be a home here as well.</p>
     <br>
-    <p>Thank you for your continued support and love. I hope you enjoy my direction!</p>
+    <p class="blog">Thank you for your continued support and love. I hope you enjoy my direction! I am learning so many new and more advanced things in coding and I hope to turn all my dreams into reality one day!!!</p>
 
 </div>
 
