--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
  <!--Insert the thumbnail text here!-->
  <p class="blog">
-      Lot of updates to this site as of late, as I learn more about HTML coding. I am very excited to show ya'll my plans. </p>
+      I have a lot of updates to this site, as I learn more about HTML coding. I am very excited to show y'all my plans. in this new "zero" blog :) </p>
      
    <center> <input onclick="change5()" value="Show More" ID="button5" type="submit" class="collapse5" style="cursor: url(custompointer.png), auto; position:relative; top:50%; margin: 0 auto; display:inline-block; width:30vw;height:30px;color:white; background-color:black;"/>
  
