--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@ width:100%; height:100%; object-fit: fill; ">  </a>
  <p class="maintext" style="color:white;"> hello! here is five pieces of art that currently inspire me. </p> 
   
  
-  <p class="maintext">The Vanishing Half</p>
-  <p class="maintext">Dante's Inferno</p>
+  <p class="maintext">Anthony Bourdain: No Reservations</p>
+  <p class="maintext">The Setting Sun</p>
   <p class="maintext">One Piece</p>
-  <p class="maintext">The Vince Staples Show</p>
-  <p class="maintext">Tekken 8</p>
+  <p class="maintext">Love Deluxe</p>
+  <p class="maintext">Gintama</p>
 
   
   </div>
