--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
  <p class="blog">
   This blog is to serve as a companion piece to my latest video </p>
   <br>
-  <a href="https://www.youtube.com/watch?v=kS7sLQIXPTk&ab_channel=MousaMovies">Taste of Life Ep.1 The City of Brohterly Love, Cheesesteaks & Newgrounds</a>
+  <a href="https://www.youtube.com/watch?v=kS7sLQIXPTk&ab_channel=MousaMovies" target="_blank" >Taste of Life Ep.1 The City of Brohterly Love, Cheesesteaks & Newgrounds</a>
   <br>
   <p class="blog">I highly recommend watching the video first, but you can still read this blog without it. Now that we have passed the disclaimer, I want to talk about my trip to Philly and what it means to me internally. This summer has been the summer of literature for me, I am by no means a book connoisseur, but having a library card and a few minutes to kill from time to time has helped me get through a few books so far. Of the literature I am reading, I find the beat generation of writing to be something I truly gravitate towards. American classic fiction has never been my favorite truthfully, the classics just don’t move me as much as more modern novels. I think it was mostly due to a lack of truly interesting characters. Sure Huckleberry Finn is an icon, but what the hell does he have to do with me? This is a similar problem many of the beat authors had.   </p>
   <br>
@@ -115,7 +115,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
     <br>
     <br>
     <br>
-    
+
 
 
 
