--- a/blog.html
+++ b/blog.html
@@ -111,7 +111,9 @@ width:100%; height:100%; object-fit: fill; ">  </a>
     <br>
     <p class="blog">To conclude, don’t just use your senses, instead experience them and explore how things make you feel when you create your memories. The Beat’s in the end never fully got over their own reflection and fell into hopelessness and being tragic examples of tortured authors. Enjoy life and bask in the smaller things, because those are the things that are pure and rewarding, and believe in something greater than yourself to avoid a life of hopelessness. Go find a place and explore it, until next time may your adventures be wild, and your stories be grand - Mousa</p>
     <br>
-    <img src="https://live.staticflickr.com/3221/2598646736_68d6255043_b.jpg">
+    <img src="https://live.staticflickr.com/3221/2598646736_68d6255043_b.jpg" style="width: 90%;
+    display: block;
+    margin: 0 auto;">
     <br>
     <br>
     <br>
