Professional Portfolio Update
added a lot

--- a/gallery.html
+++ b/gallery.html
@@ -60,104 +60,38 @@ width:100%; height:100%; object-fit: fill; "> </a>
  <div id="content">
  
  <!-- Each gallery page can hold up to 16 items. Delete and duplicate to change the number of media slots on page.-->
- 
+ <h1>Click on images to learn more, thank you</h1>
  <div class="gallery">
-<a target="_blank" href="/images/image1.jpeg">
-    <img src="/images/image1.jpeg" alt="dog in me"> </a>
-    <div class="desc">Image Example</div>
+<a target="_blank" href="/images/Ignite.png">
+    <img src="/images/Ignite.png" alt="Ignite poster"> </a>
+    <div class="desc">Ignite Project Description</div>
 </div>
 
 <div class="gallery">
-<a target="_blank" href="/videos/Im Firing My Lazer.mp4">
-    <img src="/videos/videothumbnail.png" alt="Firin mah lazer"> </a>
-    <div class="desc">Video Example</div>
+<a target="_blank" href=https://drive.google.com/drive/folders/1wrudQp4IcecLFaA_om5OM15d45OCaEAY?usp=sharing>
+    <img src="/images/M&SVOA.PNG" alt="Michael & Son x VOA ice cream social"> </a>
+    <div class="desc">Michael & Son x VOA community outreach (links to google drive folder)</div>
 </div>
 
 <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
+<a target="_blank" href=https://www.facebook.com/michaelandson/>
+    <img src="images/M&SFB.PNG" alt="M&S Social Media"> </a>
+    <div class="desc">Ran Michael & Son's Facebook and instagram from May 29th - August 30th of 2024 (links to company facebook)</div>
 </div>
 
 
  <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
+<a target="_blank" href="videos/Noz_site_example.mp4">
+    <img src="videos/Noz_vid_thumbnail.jpg" alt="NOZ Shopify"> </a>
+    <div class="desc">Shopify Walkthrough Video (school project)</div>
 </div>
 
  <div class="gallery">
 <a target="_blank" href="image/video url">
     <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
+    <div class="desc">To be continued</div>
 </div>
 
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
-
- <div class="gallery">
-<a target="_blank" href="image/video url">
-    <img src="imagefilename.png" alt="alt text"> </a>
-    <div class="desc">Blank Example</div>
-</div>
 
 
  
