--- a/index.html
+++ b/index.html
@@ -73,12 +73,10 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   <div class="text-container">
    <!-- Fill in text/media here -->  
    <h1> announcements </h1>
-   <p class="maintext">3 13 24 GO STREAM OSWEGATCHIE :D</p>
-   <p class="maintext">3 4 24 welcome to Mousa World! please enjoy your visit :) New blog as well today!</p>
-   <a href="https://www.youtube.com/watch?v=MvKaqdZaHmY&list=PLz7PbgPufE2SlUHCutRYkAOCLvHkCtVbD&index=2&ab_channel=MousaMovies" target="_blank" title="I Suck at tekken 8">New Vid "Tekken 8 CWCW"</a>   
- <img id="announcementgif" src="/images/18_400.jpg" style="width: 50%;
- display: block;
- margin: 0 auto;"> 
+   <p class="maintext">8 24 24 Added Professional portfolio, I will get around to my creative portfolio soon, been a busy summer sadly</p>
+  
+   <p class="maintext">3 4 24 welcome to Mousa World! please enjoy your visit :) Latest blog "Hope and Optimism in Philadelphia" please read!</p>
+   
    
   </div>
   </div>
@@ -124,11 +122,11 @@ width:100%; height:100%; object-fit: fill; ">  </a>
  <p class="maintext" style="color:black;"> hello! here is five pieces of art that currently inspire me. </p> 
   
  
-  <p class="maintext">The Vanishing Half</p>
-  <p class="maintext">Dante's Inferno</p>
+  <p class="maintext">Hard Times</p>
+  <p class="maintext">Ferris Bueller's Day off</p>
   <p class="maintext">One Piece</p>
-  <p class="maintext">The Vince Staples Show</p>
-  <p class="maintext">Tekken 8</p>
+  <p class="maintext">Minecraft</p>
+  <p class="maintext">Sekiro</p>
 
   
   </div>
@@ -342,7 +340,7 @@ div.gallery:hover {
   left: 0;
   right: 0;
   margin:0 auto;
-  background-color: #fff;
+  background-color: #ff00006e;
   text-align:center;
 }
 
