--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   <div class="text-container">
    <!-- Fill in text/media here -->  
    <h1> Announcements </h1>
-   <p class="maintext">8 24 24 Added Professional portfolio, I will get around to my creative portfolio soon, been a busy summer sadly</p>
-  
-   <p class="maintext">3 4 24 welcome to Mousa World! please enjoy your visit :) Latest blog "Hope and Optimism in Philadelphia" please read!</p>
-   
+   <p class="maintext">8 24 24 I am still working on the site. Added Professional Portfolio ty for the support <3</p>
+   <p class="maintext">3 4 24 welcome to Mousa World! please enjoy your visit :) New blog as well today!</p>
+
    
   </div>
   </div>
@@ -125,11 +124,11 @@ width:100%; height:100%; object-fit: fill; ">  </a>
  <p class="maintext" style="color:white;"> hello! here is five pieces of art that currently inspire me. </p> 
   
  
-  <p class="maintext">The Vanishing Half</p>
-  <p class="maintext">Dante's Inferno</p>
+  <p class="maintext">Anthony Bourdain: No Reservations</p>
+  <p class="maintext">Hard Times</p>
   <p class="maintext">One Piece</p>
-  <p class="maintext">The Vince Staples Show</p>
-  <p class="maintext">Tekken 8</p>
+  <p class="maintext">Minecraft</p>
+  <p class="maintext">Sekiro</p>
 
   
   </div>
