--- a/gallery.html
+++ b/gallery.html
@@ -294,7 +294,7 @@ div.gallery:hover {
 
 .desc {
 	display: block;
-	position: absolute;
+	position: relative;
 	top: 120%;
 	left: 50%;
 	transform: translate(-50%, -50%);
