--- a/gallery.html
+++ b/gallery.html
@@ -342,7 +342,12 @@ div.gallery:hover {
 
 @media only screen and (max-width: 700px) {
 .desc {
- font-size: 1.7vh;
+ font-size: 1vh;
+ display: block;
+ position: relative;
+ text-align: center;
+  color:white;
+  overflow:visible;
  }
 }
 
