--- a/gallery.html
+++ b/gallery.html
@@ -77,7 +77,7 @@ width:100%; height:100%; object-fit: fill; "> </a>
 </div>
 
 <div class="gallery">
-<a target="_blank" href=https://www.facebook.com/michaelandson/>
+<a target="_blank" href=https://www.facebook.com/share/Ptim7wmJsS5FyCwc/?mibextid=LQQJ4d/>
     <img src="images/M&SFB.PNG" alt="M&S Social Media"> </a>
     <div class="desc">Ran Michael & Son's Facebook and instagram from May 29th - August 30th of 2024 (links to company facebook)</div>
 </div>
