--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
  <!--Insert the thumbnail text here!-->
  <p class="blog">
-      PFirst of all. Yes, I am still retired, but I pay 20 a year for this website so I will use it to rant on here because frankly, I don’t want to annoy my friends at 4 am. I usually tweet out my frustrations, but if my tweets get less than 2 likes then I feel like dying, so to save myself the embarrassment I will put my thoughts out on my website where I am the only one who can yap on here. I think I just like hearing my voice, well my typing voice. Anyways today's topic? ah yes, EVERYONE'S A CRTIC, and quite frankly I hate it. </p>
+      First of all. Yes, I am still retired, but I pay 20 a year for this website so I will use it to rant on here because frankly, I don’t want to annoy my friends at 4 am. I usually tweet out my frustrations, but if my tweets get less than 2 likes then I feel like dying, so to save myself the embarrassment I will put my thoughts out on my website where I am the only one who can yap on here. I think I just like hearing my voice, well my typing voice. Anyways today's topic? ah yes, EVERYONE'S A CRTIC, and quite frankly I hate it. </p>
      
    <center> <input onclick="change22()" value="Show More" ID="button22" type="submit" class="collapse22" style="cursor: url(custompointer.png), auto; position:relative; top:50%; margin: 0 auto; display:inline-block; width:30vw;height:30px;color:white; background-color:black;"/>
  
