--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
  </div> 
 
- <marquee bgcolor="#FF1F00" class="scrolla">THE WORLD IS YOURS</marquee>
+ <marquee bgcolor="#FF1F00" class="scrolla">HAPPY 1 YEAR ANNIVERSARY, YOU ARE MY WORLD!</marquee>
 
      <div id="content">
       
