--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   <div class="text-container">
    <!-- Fill in text/media here -->  
    <h1> Announcements </h1>
+   <P class="maintext">3 3 25 happy 1 year anniversary of mousa.world thank you to everyone who supported my dreams</P>
    <p class="maintext">8 24 24 I am still working on the site. Added Professional Portfolio ty for the support <3</p>
    <p class="maintext">3 4 24 welcome to Mousa World! please enjoy your visit :) New blog as well today!</p>
 
