--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
      <!-- Fill in text here -->  
   <h1> Welcome to my site!</h1>
   <p class="maintext"> My name is Mousa, and this site is the main directory to my portfolio, contacts and personal blogspace. </p>
+  <p class="maintext">Join my newsletter -> <a href="contact.html" target="_blank" style="color: #e1e8e2;"><b>HERE</b></a></p>
   <p class="maintext">Join my film club -> <a href="https://discord.com/invite/ng8pcnwqTA" target="_blank" style="color: #e1e8e2;"><b>HERE</b></a></p>
   
   </div>
