--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   <p class="maintext">Join my film club -> <a href="https://discord.com/invite/ng8pcnwqTA" target="_blank" style="color: #e1e8e2;"><b>HERE</b></a></p>
   
   </div>
+  <br>
+  <br>
+  
 
     
   <div id="announcements">
@@ -128,10 +131,10 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   
  
   <p class="maintext">Anthony Bourdain: No Reservations</p>
-  <p class="maintext">Hard Times</p>
+  <p class="maintext">Berserk</p>
   <p class="maintext">One Piece</p>
-  <p class="maintext">Minecraft</p>
-  <p class="maintext">Sekiro</p>
+  <p class="maintext">Severence</p>
+  <p class="maintext">Star Wars</p>
 
   
   </div>
@@ -256,8 +259,8 @@ window.addEventListener("click", function(event) {
   border-radius: 25px;
   display: block;
   width: 33%;
-  position: absolute;
-  top: 28vh;
+  position:absolute;
+  top: 36vh;
   left: 2vw;
   right: 80%;
   background-color: #ff00006e;
@@ -280,7 +283,7 @@ window.addEventListener("click", function(event) {
   border-radius: 25px;
   width: 53%;
   position: absolute;
-  top: 28vh;
+  top: 36vh;
   right: 2vw;
   background-color: rgba(0, 0, 0, 0.671);
   border: 2px solid #FF8100;
