another small fix no longer required

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@ width:100%; height:100%; object-fit: fill; "> </a>
       <input type="text" name="first" placeholder="First Name" autocomplete="off" required>
       <input type="text" name="last" placeholder="Last Name" autocomplete="off" required>
       <input type="email" name="email" placeholder="Email Adress" autocomplete="off" required>
-      <textarea rows="5" cols="60" name="message" placeholder="Type Here" autocomplete="off" required></textarea>
+      <textarea rows="5" cols="60" name="message" placeholder="Send me a message (optional)" autocomplete="off"></textarea>
       <button id="newsletterbutton" type="submit">Join the newsletter!</button>
   </form>
 </body>
