--- a/blog.html
+++ b/blog.html
@@ -3762,7 +3762,7 @@ window.addEventListener("click", function(event) {
   top:10%;
   right:0;
   width:100%;
-  background-color: #ffc0cb;
+  background-color: #0F1F38;
   color: white;
   text-align: center;
   vertical-align:middle;
@@ -3790,7 +3790,7 @@ window.addEventListener("click", function(event) {
   left:0;
   right:0;
   width:100%;
-  background-color: #ffc0cb;
+  background-color: #FF8100;
   color: black;
   text-align: center;
   height: 80px;
@@ -3812,9 +3812,9 @@ window.addEventListener("click", function(event) {
 
 /* Change blog container colors, add patterns, backgrounds, etc. */
  .blogbox{
-    width: 90%;
-    border: 3px #ffc0ff;
-    background-color: #ffc0cb;
+    width: 70%;
+    border: 3px #fff;
+    background-color: #dde5ed;
     z-index: 1;
     word-wrap: break-word;
     overflow: auto;
@@ -3943,7 +3943,7 @@ window.addEventListener("click", function(event) {
   body {
   background:black;
   background-size:100%;
-  background-image: url(mousa_world_bg_fall.png);
+  background-image: url(mousa_world_bg.JPG);
   background-repeat: repeat;
   font-family: "Futura";
   src: url(Fonts/Futura\ Light\ Oblique.otf);
