--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ window.addEventListener("click", function(event) {
   #content { 
   height: 120vh;
   position: relative;
-  background-image: url(mousa_world_bg_fall.png);
+  background-image: url(mousa_world_bg.JPG);
   background-position: center;
   background-size: 100%;
   background-repeat: repeat;
