--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@ width:100%; height:100%; object-fit: fill; "> </a>
 
 <div id="profile">
 <!--Plug in your avatar image here!--> 
-<img class="bg" src="/images/MousaContactPhoto.jpg"
+<img class="bg" src="/images/MousaContactPhoto2025.jpg"
 display: block;
 margin: 0 auto;>
 </div>
@@ -101,7 +101,7 @@ margin: 0 auto;>
             <h2 style="text-align:center;">Mousa Mansour</h2>
             <!--Plug in your bio here!-->
             <p class="IDtext"><i>"The unexamined life is a life not worth living" - Socrates</i></p>
-            <p class="IDtext">I am always hungry to learn and grow my skills, I have a passion for marketing due to it being the psychology of a business.
+            <p class="IDtext">I am always hungry to learn and grow my skills, I have a passion for cooking due to it being the backbone of human connection.
 
               When I'm not learning you can find me creating or writing. I have a huge passion for writing and art and use it as a chance to grow and challenge my mind.</p>
         </div>
