--- a/gallery.html
+++ b/gallery.html
@@ -90,10 +90,15 @@ width:100%; height:100%; object-fit: fill; "> </a>
 </div>
 
  <div class="gallery">
+<a target="_blank" href="https://www.linkedin.com/in/mousamansour/overlay/education/1050363221/multiple-media-viewer/?profileId=ACoAAD9CyUgBMzUR91RUYt_zWSUTS9hf2bX7kVc&treasuryMediaId=1752440860632">
+    <img src="images/finals_tomato.jpg" alt="Stuffed Tomato Ratatouille"> </a>
+    <div class="desc">MCAI Culinary Arts Certification (links to linkedin photo gallery)</div>
+</div>
+
+ <div class="gallery">
 <a target="_blank" href="image/video url">
     <img src="imagefilename.png" alt="alt text"> </a>
     <div class="desc">To be continued</div>
-</div>
 
 
 
