--- a/gallery2.html
+++ b/gallery2.html
@@ -65,9 +65,9 @@ width:100%; height:100%; object-fit: fill; "> </a>
  <!-- Each gallery page can hold up to 16 items. Delete and duplicate to change the number of media slots on page.-->
  
  <div class="gallery">
-<a target="_blank" href="/images/image1.jpeg">
-    <img src="/images/image1.jpeg" alt="dog in me"> </a>
-    <div class="desc">Image Example</div>
+<a target="_blank" href="https://mousa.world/index">
+    <img src="/mousaworldlogo.ico" alt="dog in me"> </a>
+    <div class="desc">This website lol</div>
 </div>
 
 <div class="gallery">
