--- a/webring.html
+++ b/webring.html
@@ -71,7 +71,7 @@ width:100%; height:100%; object-fit: fill; "> </a>
   
   <!--add your friend's banners or website links-->
 
-  <p class="webring">I am currently living in Alexandria VA and looking for work. Outside of work, I have an intense passion for the arts and always want to grow and learn in any way I can. This website is me, or at least an extension of me, as the website grows and improves it will represent my own personal growth and improvement.</p>
+  <p class="webring">I am currently living in Alexandria VA and looking for freelance work. Outside of working in the kitchen, I have an intense passion for the arts and always want to grow and learn in any way I can. This website is me, or at least an extension of me, as the website grows and improves it will represent my own personal growth and improvement.</p>
   <p class="webring"><b>Why you should consider working with me</b></p>
   <p class="webring">I am ambitious and I am always looking for ways to get the most out of life. I am also a team player who strives to make sure everyone in my circle eats. Lastly, I am also a creative thinker who finds new ways to send messages out. I am interested in working on any project you may view as a fit for me and I will answer you if you reach out to me via the “contact” button at the top of this website.</p>
   <p class="webring"><b>Acknowledgments</b></p>
